--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         // ========================================
         const BASE_URL = 'https://informatics-consultancy-firm.github.io/form-builder';
         
-        const state = {    
+        const state = {
             fields: [],
             selectedFieldId: null,
             fieldCounter: 0,
@@ -817,7 +817,7 @@
         
         function getFormUrl() {
             const formName = state.settings.title.replace(/[^a-z0-9]/gi, '-').toLowerCase();
-            return `${BASE_URL}/${formName}.html`;
+            return `${BASE_URL}/${formName}/`;
         }
 
         function saveSettings() {
