--- a/index.html
+++ b/index.html
@@ -585,10 +585,10 @@
         // ============================================
         const CONFIG = {
             // Your Google Apps Script Web App URL (Deploy → New deployment → Web app)
-            SCRIPT_URL: 'YOUR_APPS_SCRIPT_URL_HERE',
+            SCRIPT_URL: 'https://script.google.com/macros/s/AKfycbwC64Hy4GSaDPuRACNC57Qwdw58yt6F_pnXLrf0mp-hzEyyCDGq3SWHLrK1VS8kPlKFzQ/exec',
             
             // Your Google Sheet ID (from the URL: https://docs.google.com/spreadsheets/d/SHEET_ID_HERE/edit)
-            SHEET_ID: 'YOUR_GOOGLE_SHEET_ID_HERE'
+            SHEET_ID: 'https://docs.google.com/spreadsheets/d/1tmvx7x3Z4ZYNxeaCLHsxtZrpECLqNRE6rCxk3QiFCZ8/edit?gid=0#gid=0'
         };
 
         // ============================================
