--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Builder Pro - ICF-SL | DHIS2 Integration</title>
+    <title>ICF Collect | DHIS2 Integration</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script>
@@ -315,7 +315,7 @@
         <div class="auth-box">
             <div class="auth-header">
                 <img src="https://github.com/mohamedsillahkanu/gdp-dashboard-2/raw/6c7463b0d5c3be150aafae695a4bcbbd8aeb1499/ICF-SL.jpg" alt="ICF-SL">
-                <h1>Form Builder Pro</h1>
+                <h1>ICF Collect</h1>
                 <p>DHIS2 Integration</p>
             </div>
             <div class="auth-body">
