--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     <header class="header">
         <div class="header-brand">
             <img src="https://github.com/mohamedsillahkanu/gdp-dashboard-2/raw/6c7463b0d5c3be150aafae695a4bcbbd8aeb1499/ICF-SL.jpg" alt="ICF-SL" class="header-logo">
-            <h1><i data-lucide="clipboard-list" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;"></i>Form Builder Pro</h1>
+            <h1><i data-lucide="clipboard-list" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;"></i>ICF Collect</h1>
         </div>
         <div class="header-actions">
             <span class="header-user" id="headerUser"><i data-lucide="user" style="width:12px;height:12px;vertical-align:middle;margin-right:4px;"></i>User</span>
