--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     <div class="viewer-container" id="homeContainer"></div>
     
     <!-- Footer -->
-    <footer class="footer">© 2025 Informatics Consultancy Firm - Sierra Leone (ICF-SL) | Form Builder Pro</footer>
+    <footer class="footer">© 2025 Informatics Consultancy Firm - Sierra Leone (ICF-SL) | ICF Collect v2</footer>
 
     <!-- DHIS2 Configuration Modal -->
     <div class="modal-overlay" id="dhis2Modal">
